<resources>
    <string name="app_name">Android-Mobile-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="enter_login_credentials">Enter Login Credentials</string>
    <string name="sign_up">Login</string>
    <string name="email">Email</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Sing Up</string>
    <string name="registerText">Sing Up</string>
    <string name="new_user_register">New User Register</string>
    <string name="about">About</string>
    <string name="about_text">Mobile Android App helps you to understand how Kotlin and Android works.\n\n In this app I use Camera X, sensors like accelerometer and light sensor.\n\n I communicate with weather API to display weather where ever you like. </string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="camerax">CameraX</string>
    <string name="logout">LOGOUT</string>
    <string name="accelerationSensors">Acceleration Sensor</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="enter_a_city">Enter a location</string>
    <string name="location_start"></string>
    <string name="current_date">31 May 2022, 20:08 PM</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="enter_location">Enter</string>
    <string name="email_hint">email</string>
</resources>